# Autotype

./: .gitignore  .pre-commit-config.yaml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  GUI_script.py  LICENSE  PAT.txt  Pipfile  README.md  Youtube link  command_line_script.py  optional-requirements.txt  out.py  pyproject.toml  requirements.txt  setup.py  simulate_keyboard.py  test.txt
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: greetings.yml  linter.yml  publish_to_pypi.yml
Autotype/: __init__.py  __main__.py  cli.py  core.py  gui.py
Simulator/: __init__.py  simulate_keyboard.py
src/Autotype/: __init__.py  __main__.py  simulate_keyboard.py  test.py  utils.py
