[build-system]
requires      = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "Autotype"
version = "1.0.0"
description = "A quick and small python script that helps you autotype on websites."
readme = "README.md"
authors = [{ name = "Tushar Gupta", email = "codingid6@gmail.com" }]
license = { file = "LICENSE" }
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
]
keywords = ["bitssh", "sshmanager", "commandline"]
dependencies = [
    pynput,
    typer
]
requires-python = ">=3.9"

[project.optional-dependencies]
dev = ["black", "bumpver", "isort", "pip-tools", "pytest"]

[project.urls]
Homepage = "https://github.com/Mr-Sunglasses/bitssh"
Docs = "https://github.com/Mr-Sunglasses/bitssh/blob/master/docs/docs.md"

[project.scripts]
Autotype = "Autotype.__main__:main"

[tool.bumpver]
current_version = "1.0.0"
version_pattern = "MAJOR.MINOR.PATCH"
commit_message  = "Bump version {old_version} -> {new_version}"
commit          = true
tag             = true
push            = false

[tool.bumpver.file_patterns]
"pyproject.toml" = ['current_version = "{version}"', 'version = "{version}"']
"src/bitssh/__init__.py" = ["{version}"]